--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -4,7 +4,7 @@
 	<div class ="container-fluid">
 		<div class="row">
 			<div class="col-md-2 col-sm-3 col-xs-3">
-				<div><%= link_to image_tag("Icon_final.png", :class => "icon"), :action => "index", :controller => "welcome" %>
+				<div><%= link_to image_tag("Icon_final.png", :class => "icon"), root_path %>
 				</div>
 
 
