add swipe functionality

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -1,37 +1,44 @@
+<div class="container-fluid content">
   <% @events.each do |event| %>
-  <div class="row row_events">
-    <div class="column1 col-date col-md-1 col-sm-1 col-xs-1">
-      <div class="col-md-12"><%= month_converter(event.date).upcase %></div>
-      <div class="date col-md-12 side"><%= day_converter(event.date) %></div>
-      <div class="col-md-12"><%= weekday_converter(event.date).upcase %></div>
+  <div class="event_wrapper">
+    <div class="red_overlay"></div>
+    <div class="row row_events">
+      <div class="column1 col-date col-md-1 col-sm-1 col-xs-1">
+        <div class="col-md-12"><%= month_converter(event.date).upcase %></div>
+        <div class="date col-md-12 side"><%= day_converter(event.date) %></div>
+        <div class="col-md-12"><%= weekday_converter(event.date).upcase %></div>
+      </div>
+
+      <div class="col-md-10 col-sm-8 col-xs-8 ">
+        <ul>
+          <li class="event_header"><%= link_to event.name, event_path(event) %></li>
+          <li class="event_date"><%= date_converter(event.date) %></li>
+          <li><%= event.venue %> <%= event.city %></li>
+        </ul>
+      </div>
+
+      <div class="col-md-1 col-sm-1 col-xs-2">
+        <i class="glyphicon glyphicon-star index" onclick = "checkCookie(<%= event.id %> )"></i>
+      </div>
     </div>
 
-    <div class="col-md-10 col-sm-8 col-xs-8 ">
-      <ul>
-        <li class="event_header"><%= link_to event.name, event_path(event) %></li>
-        <li class="event_date"><%= date_converter(event.date) %></li>
-        <li><%= event.venue %> <%= event.city %></li>
-      </ul>
+    <div class="green_overlay"></div>
+
+    <div class="row row_data text-center">
+      <div class="col-md-12">
+        <button id="button_down" type="button" data-toggle="collapse" data-target="#data<%=event.id%>">
+          <i class="glyphicon glyphicon-chevron-down"></i>
+        </button>
+      </div>
     </div>
 
-    <div class="col-md-1 col-sm-1 col-xs-2">
-      <i class="glyphicon glyphicon-star index" onclick = "checkCookie(<%= event.id %> )"></i>
-    </div>
-  </div>
-
-  <div class="row row_data text-center">
-    <div class="col-md-12">
-      <button id="button_down" type="button" data-toggle="collapse" data-target="#data<%=event.id%>">
-        <i class="glyphicon glyphicon-chevron-down"></i>
-      </button>
-    </div>
-  </div>
-
-  <div class="collapse row row_description" id="data<%=event.id%>">
-    <div class="col-md-12">
-      <%= truncate(strip_tags(event.description), length: 200, separator: ' ') { link_to "More", event_path(event) }%>
+    <div class="collapse row row_description" id="data<%=event.id%>">
+      <div class="col-md-12">
+        <%= truncate(strip_tags(event.description), length: 200, separator: ' ') { link_to "More", event_path(event) }%>
+      </div>
     </div>
   </div>
   <% end %>
 </div>
+
 <!-- End of Event Listing container -->
