--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -201,6 +201,41 @@ section {
 .container-fluid.content {
 	width: 90%;
 	margin: 0px auto 0px auto;
+
+	.event_wrapper {
+		position: relative;
+		overflow: hidden;
+	}
+
+	.red_overlay {
+		width: 100%;
+		height: 85px;
+		background: rgba(255, 18, 13, .5);
+		position: absolute;
+		right: -100%;
+		top: 0;
+		pointer-events: none;
+		-webkit-transition: 0.2s;
+		-moz-transition: 0.2s;
+		-ms-transition: 0.2s;
+		-o-transition: 0.2s;
+		transition: 0.2s;
+	}
+
+	.green_overlay {
+		width: 100%;
+		height: 85px;
+		background: rgba(82, 176, 70, .5);
+		position: absolute;
+		left: -100%;
+		top: 0;
+		pointer-events: none;
+		-webkit-transition: 0.2s;
+		-moz-transition: 0.2s;
+		-ms-transition: 0.2s;
+		-o-transition: 0.2s;
+		transition: 0.2s;
+	}
 }
 
 .row_events {
