--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -12,7 +12,6 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-<<<<<<< HEAD
     <div class="collapse navbar-collapse">
       <ul class="nav pull-right navbar-nav">
         <li><%= link_to 'Events', events_path %></li>
@@ -26,7 +25,7 @@
         <li>
           <%= link_to 'Send Feedback', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', target: "_blank" %>
         </li>
-        <li><%= render 'layouts/login' %></li>
+        <%= render 'layouts/login' %>
       </ul>
     </div><!-- /.navbar-collapse -->     
   </div><!-- /.container-fluid -->
