--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -9,10 +9,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <!-- Events -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav pull-right navbar-nav">
         <li><%= link_to 'Events', events_path %></li>
         <li><%= link_to 'Favorites',  favorite_path, :class => 'fav_events' %></li>
