--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -166,7 +166,7 @@
 							</div>
 	          </div>
 	          <div class="item carousel-fade">
-	            <div id="geom_image">
+	            <div id="la_image">
 								<%=image_tag("Logo_final.png", class: "welcome_logo")%>
 							</div>
 	          </div>
