Fix favorite in filtered events

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -42,3 +42,15 @@
 </div>
 
 <!-- End of Event Listing container -->
+
+<!-- Favorite Function -->
+<script>
+$(".glyphicon-star.index").click(function(){
+  $(this).toggleClass('yellow');
+  });
+</script>
+
+
+<script>
+  addYellowClass();
+</script>
