--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -39,6 +39,16 @@
 	<% end %>
 </div>
 
+<script>
+$(".glyphicon-star.index").click(function(){
+	$(this).toggleClass('yellow');
+	});
+</script>
+
+
+<script>
+	addYellowClass();
+</script>
 
 
 
