--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+  <div class="text-center">
 <h2>Edit <%= resource_name.to_s.humanize %> Settings</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -32,20 +34,18 @@
 
     <%= check_box_tag "Courses", :interest %> 
     <%= label_tag "Courses"%><br>
-  <!--     
+      
     <%= check_box_tag "Job Fair", :interest %> 
     <%= label_tag "Job Fair"%><br>
 
     <%= check_box_tag "Charity Events & Fundraisers", :interest %> 
     <%= label_tag "Charity Events & Fundraisers"%><br>
 
-
-
     <%= check_box_tag "Classes", :interest %> 
     <%= label_tag "Classes"%><br>
 
     <%= check_box_tag "Online", :interest %> 
-    <%= label_tag "Online"%><br> -->
+    <%= label_tag "Online"%><br>
   </div>
 
   <div><%= f.submit "Update" %></div>
@@ -58,3 +58,6 @@
 
 
 <%= link_to "Back", :back %>
+</div>
+</div>
+
