--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -18,7 +18,7 @@
       </div>
 
       <div class="col-md-1 col-sm-1 col-xs-2">
-        <i class="glyphicon glyphicon-star index" onclick = "checkCookie(<%= event.id %> )"></i>
+        <i class="glyphicon glyphicon-star index" onclick = "checkCookie(<%= event.id %>, favorite() )"></i>
       </div>
     </div>
 
@@ -50,7 +50,7 @@ $(".glyphicon-star.index").click(function(){
   });
 </script>
 
-
 <script>
   addYellowClass();
 </script>
+
