--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -20,15 +20,8 @@
 
 <!-- Favorite Function -->
 <script>
-$(".glyphicon-star.index").click(function(){
-	$(this).toggleClass('yellow');
-	});
-</script>
-
-
-<script>
-	addYellowClass();
-</script>
+//   addYellowClass();
+// </script>
 
 <script>
 	function today() {
