--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -1,34 +1,24 @@
-
-
-<nav class="navbar navbar-default" role="navigation">
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav pull-right navbar-nav">
-        <li><%= link_to 'Events', events_path %></li>
-        <li><%= link_to 'Favorites',  favorite_path, :class => 'fav_events' %></li>
-        <li><%= link_to 'Settings', edit_user_registration_path %></li>
-        <li>
-          <%= mail_to "rob@accessfuel.com" do %>
-            <span class="glyphicon glyphicon-envelope"></span>
-          <% end %>
-        </li>
-        <li>
-          <%= link_to 'Send Feedback', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', target: "_blank" %>
-        </li>
-        <%= render 'layouts/login' %>
-      </ul>
-    </div><!-- /.navbar-collapse -->     
-
-    <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <%= link_to image_tag("Icon_final.png", :class => "icon"), root_path %>
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-  </div><!-- /.container-fluid -->
-</nav>
+  <!-- Begin Navbar -->
+  <div id="nav">
+    <div class="navbar navbar-inverse navbar-static-top">
+      <div class="container">
+        <%#= link_to image_tag("Icon_final.png", :class => "icon"), root_path %>
+        <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="glyphicon glyphicon glyphicon-align-justify"></span>
+        </a>
+        <div class="navbar-collapse collapse">
+          <ul class="nav pull-right navbar-nav">
+            <li><%= link_to 'Events', events_path %></li>
+            <li><%= link_to 'Favorites',  favorite_path, :class => 'fav_events' %></li>
+            <li><%= link_to 'Settings', edit_user_registration_path %></li>
+            <li><%= mail_to "rob@accessfuel.com" do %>
+              <span class="glyphicon glyphicon-envelope"></span>
+              <% end %></li>
+            <li><%= link_to 'Send Feedback', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', target: "_blank" %></li>
+            <%= render 'layouts/login' %>
+          </ul>
+        </div>    
+      </div>
+    </div><!-- /.navbar -->
+  </div>
+  <!-- End Navbar -->
