--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -1,19 +1,4 @@
-
-
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-	<div class ="container-fluid">
-		<div class="row">
-			<div class="col-md-2 col-sm-3 col-xs-3">
-				<div><%= link_to image_tag("Icon_final.png", :class => "icon"), root_path %>
-				</div>
-
-
-			</div>
-			<div id="header" class="col-md-7 col-sm-6 col-xs-4"><%= link_to 'Events', events_path %></div>
-			<div id="favorite_link_page" class="col-md-2 col-sm-3 col-xs-5"><span>Favorites</span></div>
-		</div>
-	</div>
-</nav>
+<%= render 'events/nav_bar' %>
 
 <div class="container-fluid content" style="margin-top: 85px;">
 	<% @events.each do |event| %>
