--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  Logged in as <strong><%= current_user.email %></strong><br>
+  <li><a href="#">Logged in as <%= current_user.email %></a></li>
   <li><%= link_to 'Settings', edit_user_registration_path, :class => 'navbar-link' %></li>
   <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
 <% else %>
