--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -2,7 +2,7 @@
   <div id="nav">
     <div class="navbar navbar-inverse navbar-static-top">
       <div class="container">
-        <%#= link_to image_tag("Icon_final.png", :class => "icon"), root_path %>
+        <%= link_to image_tag("Icon_final.png", :class => "navbar-brand"), root_path %>
         <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="glyphicon glyphicon glyphicon-align-justify"></span>
         </a>
