remove carousel, clean up css code, add js to change welcome background image

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,179 +1,6 @@
-<style type="text/css">
+<div id="welcomeBackground">
+	<h1 class="glyphicon glyphicon-calendar"></h1>
 
-	/*carousel*/
-	.item{
-	    background: white;    
-	    text-align: center;
-	    height: 300px !important;
-	}
-
-	.carousel{
-	    margin-top: 20px;
-	}
-
-	.carousel-indicators {
-		display: none;
-	}
-
-	.carousel-inner {
-		overflow: visible;
-	}
-
-	/*end carousel*/
-
-	.container-fluid {
-		padding: 0px 0px
-	}
-
-	#top_bar {
-		/*background-color: black;*/
-		color: white;
-		font-size: 1em;
-		margin: 0px 0px;
-		padding: -1px 0;
-	}
-
-	#logo_name {
-		color: white;
-		font-size: 3em;
-		padding-top: 100px;
-		margin: 0px;
-	}
-
-	.welcome_logo {
-		width: 450px;
-		height: auto;
-		position: absolute;
-		left: 36%;
-		top: 20%;
-	}
-
-	#header_text {
-		font-size: 3em;
-		font-weight: 4000;
-		border-right: 1px solid black;
-		padding: 15px 20px 15px 10px;
-		text-align: right;
-	}
-
-	#article_text {
-		font-size: 1em;
-		padding-top: 3em;
-		padding-right: 5px;
-		margin-bottom: 30px;
-	}
-
-	.events_link {
-		font-size: 2em;
-		background-color: orange;
-		color: rgb(50, 50, 50);
-		border-radius: 10px;
-		padding: 15px;
-		font-family: 'Oswald', sans-serif;
-		min-width: 300px;
-	}
-
-	#sign_up_link {
-		color: black;
-	}
-
-	a.events_link:hover {
-			text-decoration: none;
-	}
-
-
-
-	@media only screen and (max-width: 767px) {
-		/*carousel*/
-		.item{
-		    background: white;    
-		    text-align: center;
-		    height: 150px !important;
-		}
-
-		#header_text {
-			text-align: center;
-			padding-bottom: 20px;
-			border-right: none;
-		}
-
-		#article_text  {
-			text-align: center;
-			padding-top: 1em;
-			margin-left: 5px;
-			margin-right: 5px;
-		}
-
-		#find_events_link {
-			text-align: center;
-		}
-
-		#santa_monica_image {
-			background-image: url('https://launchrock-assets.s3.amazonaws.com/background-files/8EZADCXZ_1396659538110.png');
-		}
-
-		#logo_name {
-			color: white;
-			font-size: 2em;
-			padding-top: 50px;
-			margin: 0px;
-		}
-
-		.welcome_logo {
-			width: 250px;
-			height: auto;
-			position: absolute;
-			left: 20%;
-			top: 20%;
-		}
-
-		#header_text {
-			font-size: 2em;
-			margin-left: 5px;
-			margin-right: 5px;
-		}
-
-		.events_link {
-			font-size: 1.5em;
-		}
-
-		#welcomeBtnContainer {
-			position: absolute;
-			left: 20%;
-		}
-	}
-</style>
-
-<!--Top Bar -->
-<header>
-	<div class="container-fluid home" style="background-color:rgba(45, 45, 45, 1);">
-		<div class="row">
-			<div class="col-xs-12 text-center">
-				<p id="top_bar">Prototype Launching May 2014</p>
-			</div>
-		</div>
-
-<!-- Carousel -->
-	<%= render 'home/carousel' %>
-
-	</div>
-</header>
-
-
-<!-- Description -->
-<article>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-6 col-sm-6 col-xs-12">
-				<h1 id="header_text">Your Gateway to LA's Tech Ecosystem</h1>
-			</div>
-			<div class="col-md-6 col-sm-6 col-xs-12	">
-				<p id="article_text">Access the things you need to fuel your success within the Los Angeles tech/startup Ecosystem - people, events, courses, capital, jobs and more!</p>
-				<div id="welcomeBtnContainer">
-					<%= link_to 'Sign Up', new_user_registration_path, class: 'events_link', id: 'sign_up_link' %>
-				</div>
-			</div>
-		</div>
-	</div>
-</article>
-
+	<!-- Sign Up Button -->
+	<%= link_to 'Sign Up', new_user_registration_path, class: 'ctaSignUp', id: 'sign_up_link' %>
+</div>
