--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,63 +6,44 @@
     font-family: 'Open Sans', sans-serif;
   }
 
+  #welcomeBackground {
+    height: 100vh;
+    width: 100vw;
+  }
+
   h1, h2 {
     font-family: 'Oswald', sans-serif;
   }
 
-  .container-fluid.home {
-    padding: 0px 0px
-  }
-
-  #top_bar {
-    /*background-color: black;*/
+  h1.glyphicon.glyphicon-calendar {
     color: white;
-    font-size: 1em;
-    margin: 0px 0px;
-    padding: 15px 0 0 0;
-  }
-
-  #santa_monica_image {
-    background-image: url('https://launchrock-assets.s3.amazonaws.com/background-files/8EZADCXZ_1396659538110.png');
-    background-size: cover;
-    background-position: center center;
-    height: 100vh;
-    width: 100%;
-  }
-
-  #geom_image {
-    background-image: url(geom.png);
+    text-align: center;
+    font-size: 5em;
     position: relative;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100vh;
-    width: 100%;
+    margin: 0 auto;
   }
 
-  #geom_image:before {  
-    content: "";  
-    display: block;  
-    position: absolute;  
-    top: 0;  
-    bottom: 0;  
-    left: 0;  
-    right: 0;  
-    background: rgba(0,0,0, 0.8);  
-    -moz-transition: background .3s linear;  
-    -webkit-transition: background .3s linear;  
-    -o-transition: background .3s linear;  
-    transition: background .3s linear;  
-  }  
-
-  #la_image {
-    background-image: url(LA-amelia-strauss.jpg);
+  .ctaSignUp {
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.5em;
+    background-color: orange;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+    font-weight: 500;
+    margin: 0 auto;
     position: relative;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100vh;
-    width: 100%;
+    color: black;
+  }
+
+  a.ctaSignUp:hover {
+      text-decoration: none;
+  }
+
+/*taken from top of home/index.html.erb*/
+
+  .container-fluid {
+    padding: 0px 0px
   }
 
   #logo_name {
@@ -70,6 +51,14 @@
     font-size: 3em;
     padding-top: 100px;
     margin: 0px;
+  }
+
+  .welcome_logo {
+    width: 450px;
+    height: auto;
+    position: absolute;
+    left: 36%;
+    top: 20%;
   }
 
   #header_text {
@@ -87,16 +76,50 @@
     margin-bottom: 30px;
   }
 
-  .events_link {
-    font-size: 2.5em;
-    background-color: orange;
-    color: white;
+  .ctaSignUp {
+    font-size: 2em;
     border-radius: 10px;
-    padding: 10px;
-    font-weight: 500;
-    width: 80vw;
+    padding: 15px;
+    min-width: 300px;
   }
 
-  a.events_link:hover {
+  a.ctaSignUp:hover {
       text-decoration: none;
+  }
+
+  @media only screen and (max-width: 767px) {
+
+    #header_text {
+      text-align: center;
+      padding-bottom: 20px;
+      border-right: none;
+    }
+
+    #article_text  {
+      text-align: center;
+      padding-top: 1em;
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+
+    #find_events_link {
+      text-align: center;
+    }
+
+    #logo_name {
+      color: white;
+      font-size: 2em;
+      padding-top: 50px;
+      margin: 0px;
+    }
+
+    #header_text {
+      font-size: 2em;
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+
+    .ctaSignUp {
+      font-size: 1.5em;
+    }
   }
