--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,11 @@
 <div id="welcomeBackground">
 	<h1 class="glyphicon glyphicon-calendar"></h1>
 
+	<!-- Welcome Copy -->
+	<p class="welcomeCopy"><span>Access</span> tech & startup events in Los Angeles to <span>Fuel</span> your success!</p>
+
+	<p class="welcomeCopy" id="smallWelcomeCopy">Events from your favourite organizers - all in one place.</p>          
+
 	<!-- Sign Up Button -->
-	<%= link_to 'Sign Up', new_user_registration_path, class: 'ctaSignUp', id: 'sign_up_link' %>
+	<%= link_to 'Discover Personalized Events', new_user_registration_path, class: 'ctaSignUp' %>
 </div>
