--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -9,6 +9,7 @@
   #welcomeBackground {
     height: 100vh;
     width: 100vw;
+    position: relative;
   }
 
   h1, h2 {
@@ -16,24 +17,50 @@
   }
 
   h1.glyphicon.glyphicon-calendar {
-    color: white;
+    color: gold;
     text-align: center;
     font-size: 5em;
     position: relative;
     margin: 0 auto;
+    padding-top: 75px;
+    margin-bottom: 50px;
+    display: block;
+  }
+
+  .welcomeCopy {
+    margin: 0 auto;
+    margin-bottom: 50px;
+    width: 300px;
+    color: rgb(200,200,200);
+    text-align: center;
+    font-size: 20pt;
+    line-height: 30px;
+    -webkit-text-shadow: 0px 2px .5px rgba(50, 50, 50, 0.75);
+    -moz-text-shadow:    0px 2px .5px rgba(50, 50, 50, 0.75);
+    text-shadow:         0px 2px .5px rgba(50, 50, 50, 0.75);
+  }
+
+  .welcomeCopy>span {
+    color: rgb(255,255,255);
+    font-size: 24pt
+  }
+
+  #smallWelcomeCopy {
+    font-size: 16pt;
   }
 
   .ctaSignUp {
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
     font-family: 'Oswald', sans-serif;
     font-size: 2.5em;
     background-color: orange;
-    color: white;
     border-radius: 10px;
     padding: 10px;
     font-weight: 500;
-    margin: 0 auto;
-    position: relative;
     color: black;
+    display: table;
   }
 
   a.ctaSignUp:hover {
@@ -61,23 +88,8 @@
     top: 20%;
   }
 
-  #header_text {
-    font-size: 3em;
-    font-weight: 4000;
-    border-right: 1px solid black;
-    padding: 15px 20px 15px 10px;
-    text-align: right;
-  }
-
-  #article_text {
-    font-size: 1em;
-    padding-top: 3em;
-    padding-right: 5px;
-    margin-bottom: 30px;
-  }
-
   .ctaSignUp {
-    font-size: 2em;
+    font-size: 1.5em;
     border-radius: 10px;
     padding: 15px;
     min-width: 300px;
@@ -85,41 +97,4 @@
 
   a.ctaSignUp:hover {
       text-decoration: none;
-  }
-
-  @media only screen and (max-width: 767px) {
-
-    #header_text {
-      text-align: center;
-      padding-bottom: 20px;
-      border-right: none;
-    }
-
-    #article_text  {
-      text-align: center;
-      padding-top: 1em;
-      margin-left: 5px;
-      margin-right: 5px;
-    }
-
-    #find_events_link {
-      text-align: center;
-    }
-
-    #logo_name {
-      color: white;
-      font-size: 2em;
-      padding-top: 50px;
-      margin: 0px;
-    }
-
-    #header_text {
-      font-size: 2em;
-      margin-left: 5px;
-      margin-right: 5px;
-    }
-
-    .ctaSignUp {
-      font-size: 1.5em;
-    }
   }
