--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,49 +1,75 @@
-<h2 class="authHeader">Sign up</h2>
-
-<div class="authsContain">
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
-  <div><%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.label :interest %><br />
-
-    <%= check_box_tag "Codeathons and Hackathons", :interest %> 
-    <%= label_tag "Codeathons and Hackathons"%><br>
-
-    <%= check_box_tag "Charity Events & Fundraisers", :interest %> 
-    <%= label_tag "Charity Events & Fundraisers"%><br>
-    
-    <%= check_box_tag "Conferences", :interest %> 
-    <%= label_tag "Conferences"%><br>
-    
-    <%= check_box_tag "Trade Shows", :interest %> 
-    <%= label_tag "Trade Shows" %><br>
-
-
-
-    <%= check_box_tag "Job Fair", :interest %> 
-    <%= label_tag "Job Fair"%><br>
-
-    <%= check_box_tag "Courses", :interest %> 
-    <%= label_tag "Courses"%><br>
-
-    <%= check_box_tag "Classes", :interest %> 
-    <%= label_tag "Classes"%><br>
-
-    <%= check_box_tag "Online", :interest %> 
-    <%= label_tag "Online"%><br>
+<div class="signUpScreen"> 
+  <div class="authHeader">
+    <h5>Immediately filter through thousands of events to create your personalized list.</h5>
   </div>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+  <div class="authsContain">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
 
-<%= render "devise/shared/links" %>
+    <%= f.label :interest %><br />
+    <div class="row">
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+
+        <div class="interestBox">
+          <%= check_box_tag "Codeathons and Hackathons", :interest %> 
+          <%= label_tag "Codeathons and Hackathons"%>
+        </div>
+
+        <div class="interestBox">
+          <%= check_box_tag "Charity Events & Fundraisers", :interest %> 
+          <%= label_tag "Charity Events & Fundraisers"%>
+        </div>
+      
+        <div class="interestBox">
+          <%= check_box_tag "Conferences", :interest %> 
+          <%= label_tag "Conferences"%>
+        </div>
+      
+        <div class="interestBox"> 
+          <%= check_box_tag "Trade Shows", :interest %> 
+          <%= label_tag "Trade Shows" %>
+        </div>
+      </div>
+
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+        <div class="interestBox">
+          <%= check_box_tag "Job Fair", :interest %>
+          <%= label_tag "Job Fair"%>
+        </div>
+
+        <div class="interestBox">
+          <%= check_box_tag "Courses", :interest %> 
+          <%= label_tag "Courses"%>
+        </div>
+
+        <div class="interestBox">
+          <%= check_box_tag "Classes", :interest %> 
+          <%= label_tag "Classes"%>
+        </div>
+
+        <div class="interestBox">
+          <%= check_box_tag "Online", :interest %> 
+          <%= label_tag "Online"%>
+        </div>
+      </div>
+    </div>
+
+
+
+    <div><%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true %></div>
+
+    <div><%= f.label :password %><br />
+      <%= f.password_field :password, autocomplete: "off" %></div>
+
+    <div><%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+
+    <div><%= f.submit "Sign up" %></div>
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+  </div>
+
 </div>
