--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,11 +3,12 @@
     <h5>Immediately filter through thousands of events to create your personalized list.</h5>
   </div>
 
-  <div class="authsContain">
+  
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
-    <%= f.label :interest %><br />
+    <div class="interestHeader"><%= f.label :interest %>
+    </div>
     <div class="row">
       <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 
@@ -70,6 +71,6 @@
   <% end %>
 
   <%= render "devise/shared/links" %>
-  </div>
+  
 
 </div>
