add empty, unstyled modal for instructions

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -22,14 +22,14 @@
     font-size: 5em;
     position: relative;
     margin: 0 auto;
-    padding-top: 75px;
-    margin-bottom: 50px;
+    padding-top: 10%;
+    margin-bottom: 10%;
     display: block;
   }
 
   .welcomeCopy {
     margin: 0 auto;
-    margin-bottom: 50px;
+    margin-bottom: 10%;
     width: 300px;
     color: rgb(200,200,200);
     text-align: center;
