--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,7 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
   html, body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-weight: 100;
   }
 
   #welcomeBackground {
@@ -13,11 +14,12 @@
   }
 
   h1, h2 {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-weight: 100;
   }
 
   h1.glyphicon.glyphicon-calendar {
-    color: gold;
+    color: rgb(248, 146, 49);
     text-align: center;
     font-size: 5em;
     position: relative;
@@ -47,18 +49,19 @@
 
   #smallWelcomeCopy {
     font-size: 16pt;
+    color: rgb(248, 146, 49);
   }
 
   .ctaSignUp {
     position: relative;
     margin: 0 auto;
     text-align: center;
-    font-family: 'Oswald', sans-serif;
     font-size: 2.5em;
-    background-color: orange;
+    background-color: rgb(252, 184, 121);
     border-radius: 10px;
+    border-bottom: 8px solid rgb(248, 146, 49);
     padding: 10px;
-    font-weight: 500;
+    font-weight: 300;
     color: black;
     display: table;
   }
