--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
   html, body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif !important;
     font-weight: 100;
   }
 
@@ -14,7 +14,6 @@
   }
 
   h1, h2 {
-    font-family: 'Lato', sans-serif;
     font-weight: 100;
   }
 
@@ -25,13 +24,13 @@
     position: relative;
     margin: 0 auto;
     padding-top: 10%;
-    margin-bottom: 10%;
+    margin-bottom: 20px;
     display: block;
   }
 
   .welcomeCopy {
     margin: 0 auto;
-    margin-bottom: 10%;
+    margin-bottom: 20px;
     width: 300px;
     color: rgb(200,200,200);
     text-align: center;
@@ -53,17 +52,19 @@
   }
 
   .ctaSignUp {
+    font-family: 'Lato', sans-serif !important;
     position: relative;
     margin: 0 auto;
     text-align: center;
-    font-size: 2.5em;
+    font-size: 1.2em !important;
     background-color: rgb(252, 184, 121);
     border-radius: 10px;
     border-bottom: 8px solid rgb(248, 146, 49);
     padding: 10px;
-    font-weight: 300;
-    color: black;
+    font-weight: 300 !important;
+    color: black !important;
     display: table;
+    width: 200px;
   }
 
   a.ctaSignUp:hover {
