--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -39,9 +39,62 @@
   .btn.btn-primary {
     margin: 0 auto;
     display: block;
+    width: auto !important;
+  }
+
+/*jquery mobile test*/
+  html, body { padding: 0; margin: 0; }
+  html, .ui-mobile, .ui-mobile body {
+    height: 105px;
+  }
+  .ui-mobile, .ui-mobile .ui-page {
+    min-height: 105px;
+  }
+/*  #nav {
+    font-size: 200%;
+    width:17.1875em;
+    margin:17px auto 0 auto;
+  }*/
+/*  #nav a {
+    color: #777;
+    border: 2px solid #777;
+    background-color: #ccc;
+    padding: 0.2em 0.6em;
+    text-decoration: none;
+    float: left;
+    margin-right: 0.3em;
+  }
+  #nav a:hover {
+    color: #999;
+    border-color: #999;
+    background: #eee;
+  }
+  #nav a.selected,
+  #nav a.selected:hover {
+    color: #0a0;
+    border-color: #0a0;
+    background: #afa;
+  }*/
+  div.box {
+    width: 30em;
+    height: 3em;
+    background-color: #108040;
+  }
+  
+  div.event_wrapper.swipeleft {
+    background-color: rgb(238, 103, 89) !important;
+  }
+
+  div.box.swipeleft {
+    background-color: #7ACEF4;
+  }
+
+  .row_events {
+    pointer-events: none;
   }
 
 </style>
+<!-- <div class="box"></div> -->
 
 <button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">How to Use</button>
 
@@ -53,11 +106,10 @@
   </div>
 </div>
 
-<div class="container-fluid content">
+<div data-role="main" class="container-fluid content ui-content">
   <% @events.each do |event| %>
   <div class="event_wrapper">
-    <div class="red_overlay"></div>
-    <div class="row row_events">
+     <div class="row row_events">
       <div class="col-md-9 col-sm-9 col-xs-9" id="column1">
         <ul id="col1" style="padding-left: 15px">
           <li class="event_header"><%= link_to truncate(event.name, length: 25), event_path(event) %></li>
@@ -73,7 +125,6 @@
 
     </div>
 
-    <div class="green_overlay"></div>
   </div>
   <% end %>
 </div>
@@ -90,4 +141,66 @@ $(".glyphicon-star.index").click(function(){
 <script>
   addYellowClass();
 </script>
+
+
+
+<style>
+  html, body { padding: 0; margin: 0; }
+  html, .ui-mobile, .ui-mobile body {
+    height: 105px;
+  }
+  .ui-mobile, .ui-mobile .ui-page {
+    min-height: 105px;
+  }
+/*  #nav {
+    font-size: 200%;
+    width:17.1875em;
+    margin:17px auto 0 auto;
+  }*/
+/*  #nav a {
+    color: #777;
+    border: 2px solid #777;
+    background-color: #ccc;
+    padding: 0.2em 0.6em;
+    text-decoration: none;
+    float: left;
+    margin-right: 0.3em;
+  }
+  #nav a:hover {
+    color: #999;
+    border-color: #999;
+    background: #eee;
+  }
+  #nav a.selected,
+  #nav a.selected:hover {
+    color: #0a0;
+    border-color: #0a0;
+    background: #afa;
+  }*/
+/*  div.box {
+    width: 30em;
+    height: 3em;
+    background-color: #108040;
+  }
+  div.event_wrapper.swipeleft {
+    background-color: #7ACEF4;
+  }*/
+  </style>
+
+ 
+ 
+<script>
+$(document).ready(function(){
+    // Callback function references the event target and adds the 'swipeleft' class to it
+  function swipeleftHandler( event ){
+    $( event.target ).addClass( "swipeleft" ).delay( 800 ).fadeOut( "slow" );
+  }
+
+  // Bind the swipeleftHandler callback function to the swipe event on div.box
+  $( "div.event_wrapper" ).on( "swipeleft", swipeleftHandler );
+ 
+
+});
+</script>
+
 
