--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -91,6 +91,10 @@
     background-color: #7ACEF4;
   }
 
+  div.event_wrapper.swiperight {
+    background-color: rgb(255, 194, 137) !important;
+  }
+
   .row_events {
     pointer-events: none;
   }
@@ -145,54 +149,7 @@ $(".glyphicon-star.index").click(function(){
 <script>
   addYellowClass();
 </script>
-
-
-
-<style>
-  html, body { padding: 0; margin: 0; }
-  html, .ui-mobile, .ui-mobile body {
-    height: 105px;
-  }
-  .ui-mobile, .ui-mobile .ui-page {
-    min-height: 105px;
-  }
-/*  #nav {
-    font-size: 200%;
-    width:17.1875em;
-    margin:17px auto 0 auto;
-  }*/
-/*  #nav a {
-    color: #777;
-    border: 2px solid #777;
-    background-color: #ccc;
-    padding: 0.2em 0.6em;
-    text-decoration: none;
-    float: left;
-    margin-right: 0.3em;
-  }
-  #nav a:hover {
-    color: #999;
-    border-color: #999;
-    background: #eee;
-  }
-  #nav a.selected,
-  #nav a.selected:hover {
-    color: #0a0;
-    border-color: #0a0;
-    background: #afa;
-  }*/
-/*  div.box {
-    width: 30em;
-    height: 3em;
-    background-color: #108040;
-  }
-  div.event_wrapper.swipeleft {
-    background-color: #7ACEF4;
-  }*/
-  </style>
-
- 
- 
+  
 <script>
 $(document).ready(function(){
     // Callback function references the event target and adds the 'swipeleft' class to it
@@ -203,6 +160,14 @@ $(document).ready(function(){
   // Bind the swipeleftHandler callback function to the swipe event on div.box
   $( "div.event_wrapper" ).on( "swipeleft", swipeleftHandler );
  
+
+  // Bind the swiperightHandler callback function to the swipe event on div.box
+  $( "div.event_wrapper" ).on( "swiperight", swiperightHandler );
+ 
+  // Callback function references the event target and adds the 'swiperight' class to it
+  function swiperightHandler( event ){
+    $( event.target ).addClass( "swiperight" );
+  }
 
 });
 </script>
