add yellow class to event when swiped right

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -239,8 +239,7 @@ section {
 }
 
 .yellow {
-	color: rgb(248, 146, 49);
-	font-size: 2em;
+	background-color: rgba(248, 146, 49, .4);
 }
 
 .black {
