--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -166,7 +166,7 @@ $(document).ready(function(){
  
   // Callback function references the event target and adds the 'swiperight' class to it
   function swiperightHandler( event ){
-    $( event.target ).addClass( "swiperight" );
+    $( event.target ).addClass( "yellow" );
   }
 
 });
