edit sign up view styling

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -27,6 +27,10 @@ $maincolor: lighten(#ccc, 40%);
 	padding: 5px 5px;
 }
 
+.glyphicon.glyphicon.glyphicon-align-justify {
+	color: gray;
+}
+
 .header_row {
 	padding-bottom: 10px;
 }
