--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -53,6 +53,21 @@
           <%= check_box_tag "Online", :interest %> 
           <%= label_tag "Online"%>
         </div>
+
+        <div class="interestBox">
+          <%= check_box_tag "Fireside Chat", :interest %> 
+          <%= label_tag "Fireside Chat"%>
+        </div>
+
+        <div class="interestBox">
+          <%= check_box_tag "Festivals", :interest %> 
+          <%= label_tag "Festivals"%>
+        </div>
+
+        <div class="interestBox">
+          <%= check_box_tag "Livecasts", :interest %> 
+          <%= label_tag "Livecasts"%>
+        </div>
       </div>
     </div>
 
