--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,29 +1,49 @@
+<style>
+	.rsvp {
+		border: 1px solid black;
+		border-radius: 5px;
+		padding: 5px 10px;
+	}
+
+	.fa-users, .rsvp_badge, .fa-calendar, .fa-heart {
+		color: black;
+	}
+
+	
+</style>
+
 <!-- Container for event photo and description -->
 <div id="whole_thang">
-<section class="description">
-	<div class="container-fluid">
-		<div class="row group_photo_row">
-			<div class="col-md-12 text-center">
-				<img src="<%= @event.group_photo %>" class="group_photo">
+	<section class="description">
+		<div class="container-fluid">
+			<div class="row group_photo_row">
+				<div class="col-md-12 text-center">
+					<img src="<%= @event.group_photo %>" class="group_photo">
+				</div>
 			</div>
-		</div>
 
-	<!-- Bottom Fixed Navigation -->
-	<nav class="navbar navbar-default" id="bottom_nav" role="navigation">
-	  <div class="container bottom_container">
-			 <div class="row">
-				<div class="col-xs-4">
-					<i class="glyphicon glyphicon-star index" onclick = "checkCookie(<%= @event.id %> )"></i>
+		<!-- Bottom Fixed Navigation -->
+		<nav class="navbar navbar-default" id="bottom_nav" role="navigation">
+		  <div class="container bottom_container">
+				 <div class="row">
+					<div class="col-xs-4">
+						<p style="margin: 0px;"><button class="fa fa-calendar"></button>
+							<!-- <i class="fa fa-heart"></i> -->
+
+						</p>
+					</div>
+					<div class="col-xs-4">
+						<p><%= link_to "RSVP", @event.url, class: "rsvp" %></p>
+					</div>
+					<div class="col-xs-4 text-right">
+						<p> 
+							<i class="fa fa-users"></i>
+							<i class="rsvp_badge"> <%= @event.rsvp %> </i>
+						</p>
+					</div>
 				</div>
-				<div class="col-xs-4">
-					<p><%= link_to "RSVP NOW", @event.url %> </p>
-				</div>
-				<div class="col-xs-4 text-right">
-					<p class="badge badge_show"><%= @event.rsvp %></p>
-				</div>
-			</div>
-	  </div>
-	</nav>
+		  </div>
+		</nav>
 
 		<div class="row">
 			<div class="col-md-12 text-center">
@@ -42,13 +62,10 @@
 
 		<div class="row">
 			<div class="col-md-12 event_description">
-				<%= truncate(strip_tags(@event.description), length: 1000) %>
+				<%= truncate(strip_tags(@event.description), length: 500) %>
 			</div>
 		</div>
-</section>
-
-
-	
+	</section>
 </div>
 
 <!-- #### Script for Favorite function -->
