--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -31,6 +31,17 @@ $maincolor: lighten(#ccc, 40%);
 	color: gray;
 }
 
+.glyphicon.glyphicon-calendar {
+	color: rgb(248, 146, 49);
+	padding-top: 20px;
+	margin-left: 50%;
+}
+
+.glyphicon.glyphicon-star {
+	color: rgb(248, 146, 49);
+	padding-top: 20px;
+}
+
 .header_row {
 	padding-bottom: 10px;
 }
