--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -3,13 +3,19 @@
     <div class="navbar navbar-inverse navbar-static-top">
       <div class="container">
         <%= link_to image_tag("Icon_final.png", :class => "navbar-brand"), root_path %>
+
+        <%= link_to(events_path) do %>
+         <span class='glyphicon glyphicon-calendar'></span>
+         <% end %>
+
+         <%= link_to(favorite_path) do %>
+         <span class='glyphicon glyphicon-star'></span>
+         <% end %>
         <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="glyphicon glyphicon glyphicon-align-justify"></span>
         </a>
         <div class="navbar-collapse collapse">
           <ul class="nav pull-right navbar-nav">
-            <li><%= link_to 'Events', events_path %></li>
-            <li><%= link_to 'Favorites',  favorite_path, :class => 'fav_events' %></li>
             <li><%= link_to 'Settings', edit_user_registration_path %></li>
             <li><%= mail_to "rob@accessfuel.com" do %>
               <span class="glyphicon glyphicon-envelope"></span>
