enable pointer event on events

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -18,6 +18,7 @@
     height: 70px;
     padding-top: 10px;
     padding-bottom: 0px;
+    position: relative;
   }
 
   .event_header {
@@ -86,7 +87,7 @@
   }
 
   .row_events {
-    pointer-events: none;
+    /*pointer-events: none;*/
   }
 
 
